# camkes-vm-examples

apps/Arm/odroid_vm/: CMakeLists.txt
apps/Arm/vm_cross_connector/: CMakeLists.txt
apps/Arm/vm_introspect/: CMakeLists.txt
apps/Arm/vm_minimal/: CMakeLists.txt
apps/Arm/vm_multi/: CMakeLists.txt
apps/Arm/vm_serial_server/: CMakeLists.txt
apps/Arm/vm_virtio_net/: CMakeLists.txt
apps/x86/cma34cr_centos/: CMakeLists.txt
apps/x86/cma34cr_ubuntu/: CMakeLists.txt
apps/x86/minimal/: CMakeLists.txt
apps/x86/optiplex9020/: CMakeLists.txt
apps/x86/virtio_blk_sample/: CMakeLists.txt
apps/x86/zmq_samples/: CMakeLists.txt
